--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -1,3 +1,29 @@
+@import 'https://fonts.googleapis.com/css?family=Alegreya+Sans';
+
+/*set attributes for consistent appearance in all browsers*/
+div.wrapper { 
+    position: relative;
+    top: 0.2em;
+    left: 1.4%;
+    border: 1px solid rgba(0, 0, 0, .1);
+    border-left-width: 0 !important;
+    border-width: 10px;
+    box-shadow: 0 .05em .25em rgba(0, 0, 0, .5);
+    color: white;
+    font-size: 100%;
+    text-shadow: 0 -.05em .05em rgba(0, 0, 0, .5);
+    line-height: 1.5;
+    margin: 0 auto;
+	padding: .3em .8em;	 
+    text-shadow: 0 -.05em .05em rgba(0, 0, 0, .5);
+    width: 97%;
+    background: #58a linear-gradient(#FF9966, #58a);
+
+    clip-path:polygon(20px 0, calc(100% - 20px) 0, 100% 20px, 
+    100% calc(100% - 20px), calc(100% - 20px) 100%,
+    20px 100%, 0 calc(100% - 20px), 0 20px);
+}
+
 /* Listing 1-7b. The Revised CSS Sheet for Figure 1-7 (html5-style-2.css) 
 (The key items are picked out in bold type.) equalise for various browsers and change #header to header*/ 
 html {
@@ -8,7 +34,7 @@ html {
 .ui-mobile, .ui-mobile body{
     height: 99.9%;
 }
-
+/*
 div.wrapper {
     position: relative; 
     top: -0.5em; 
@@ -18,6 +44,7 @@ div.wrapper {
     background:#FFF url(images/green-grad.jpg) repeat-x!important;
 	color: #333;
 }
+*/
 div.row {
   display: block;
 }
@@ -223,6 +250,7 @@ li {
 #col-3 a:hover img.hid {
 	visibility: visible;
 }
+
 
 
 
