--- a/CSS/gallery-page-HTML5.css
+++ b/CSS/gallery-page-HTML5.css
@@ -1,3 +1,29 @@
+@import 'https://fonts.googleapis.com/css?family=Alegreya+Sans';
+
+/*set attributes for consistent appearance in all browsers*/
+div.wrapper { 
+    position: relative;
+    top: -0.5em;
+    left: 1.4%;
+    border: 1px solid rgba(0, 0, 0, .1);
+    border-left-width: 0 !important;
+    border-width: 10px;
+    box-shadow: 0 .05em .25em rgba(0, 0, 0, .5);
+    color: white;
+    font-size: 100%;
+    text-shadow: 0 -.05em .05em rgba(0, 0, 0, .5);
+    line-height: 1.5;
+    margin: 0 auto;
+	padding: .3em .8em;	 
+    text-shadow: 0 -.05em .05em rgba(0, 0, 0, .5);
+    width: 97%;
+    background: #58a linear-gradient(#FF9966, #58a);
+
+    clip-path:polygon(20px 0, calc(100% - 20px) 0, 100% 20px, 
+    100% calc(100% - 20px), calc(100% - 20px) 100%,
+    20px 100%, 0 calc(100% - 20px), 0 20px);
+}
+/*
 div.wrapper {
     position: relative; 
     top: 4.5em; 
@@ -7,7 +33,7 @@ div.wrapper {
     background:#FFF url(images/green-grad.jpg) repeat-x!important;
     color: #333;
 }
-
+*/
 div#gallerpageheader {width: 74.5%; height:180px; padding:0; border:10px white solid;background-color: #FFCC00;background:url(images/header3.jpg); margin: 10px auto;
 }
 h1 { font-size:100%; font-weight:bold; margin-top:20px;
