--- a/CSS/gallery-page-HTML5.css
+++ b/CSS/gallery-page-HTML5.css
@@ -16,7 +16,7 @@ div.wrapper {
     margin: 0 auto;
 	padding: .3em .8em;	 
     text-shadow: 0 -.05em .05em rgba(0, 0, 0, .5);
-    width: 97%;
+    width: 77em;
     background: #58a linear-gradient(#FF9966, #58a);
 
     clip-path:polygon(20px 0, calc(100% - 20px) 0, 100% 20px, 
