--- a/CSS/gallery-page-HTML5.css
+++ b/CSS/gallery-page-HTML5.css
@@ -3,7 +3,7 @@
 /*set attributes for consistent appearance in all browsers*/
 div.wrapper { 
     position: relative;
-    top: -0.5em;
+    top: 4.5em;
     left: 1.4%;
     border: 1px solid rgba(0, 0, 0, .1);
     border-left-width: 0 !important;
@@ -16,7 +16,7 @@ div.wrapper {
     margin: auto;
 	padding: .3em .8em;	 
     text-shadow: 0 -.05em .05em rgba(0, 0, 0, .5);
-    width: 75%;
+    width: 77em;
     background: #58a linear-gradient(#FF9966, #58a);
 
     clip-path:polygon(20px 0, calc(100% - 20px) 0, 100% 20px, 
