--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -1,5 +1,5 @@
-Listing 1-7b. The Revised CSS Sheet for Figure 1-7 (html5-style-2.css)
-(The key items are picked out in bold type.)
+/* Listing 1-7b. The Revised CSS Sheet for Figure 1-7 (html5-style-2.css) */
+/* (The key items are picked out in bold type.) */
 /*equalise for various browsers and change #header to header*/
 div body header #content { margin:0; padding:0; border:0;
 }
@@ -301,6 +301,7 @@ li {
 }
 
 */
+
 
 
 
