--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -42,7 +42,28 @@ nav li { list-style-type:none;
 /* set general side button styles */
 li.btn { margin-bottom: 3px; text-align: center; width:130px;
 }
-
+/* set general anchor styles and include the zoom fix for IE6*/
+li.btn a { display: block; color: white; font-weight: bold; 
+text-decoration: none; zoom:1;
+}
+/* specify mouse state styles */
+/* mouseout (default) */
+li.btn a { background:#559a55; color: white; border: 5px outset #559a55; 
+padding-bottom:3px;
+}
+/* mouseover */
+li.btn a:hover { background: red; color:white; border: 5px outset red;
+}
+/*mouse active*/
+li.btn a:active { background:maroon; border: 5px inset maroon;
+}
+br.clear { clear:both;
+}
+#midcol img { margin-left:10px;
+}
+/*change #footer to footer */
+footer { clear:both; color:maroon; text-align:center;
+}
 
 
 /*
