--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -9,18 +9,13 @@ body { background:#FFF url(images/green-grad.jpg) repeat-x; margin:auto;
 header, footer, section, article, nav { display:block;
 }
 /*remove the # from #header*/
-header {width:920px; height:180px; padding:0; border:10px white solid; 
-background: url(images/header3.jpg); margin:10px auto;
+header {width:920px; height:180px; padding:0; border:10px white solid; background: url(images/header3.jpg); margin:10px auto;
 }
-h1 { font-size:300%; color :white; position: relative; left:90px; top: 55px;
-width:480px;
+h1 { font-size:300%; color :white; position: relative; left:90px; top: 55px; width:480px;
 }
 #rosette { position:relative; left:750px; top:5px;
 }
-#content { background-color:transparent; border-left:10px white solid; 
-border-right:10px white solid; border-bottom:10px white solid; width: 904px; 
-margin-top:10px; margin-left:auto; margin-right:auto; padding:8px; 
-font-size:medium; color:maroon;
+#content { background-color:transparent; border-left:10px white solid; border-right:10px white solid; border-bottom:10px white solid; width: 904px; margin-top:10px; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon;
 }
 h2 { font-size:x-large; color:white; margin:0 0 10px 0;
 }
