--- a/CSS/gallery-page-HTML5.css
+++ b/CSS/gallery-page-HTML5.css
@@ -139,7 +139,7 @@ div.wrapper {
     background:#FFF url(images/green-grad.jpg) repeat-x!important;
     color: #333;
 }
-*/
+*
 div#gallerpageheader {width: 74.5%; height:180px; padding:0; border:10px white solid;background-color: #FFCC00;background:url(images/header3.jpg); margin: 10px auto;
 }
 h1 { font-size:100%; font-weight:bold; margin-top:20px;
@@ -150,24 +150,24 @@ color:black; text-align:center; font-weight:bold;
 footer {margin:10px auto 0 auto; width:950px; font-weight:bold;
 text-align:center; background-color:#FFCC00; color:black; clear:both;
 } 
-/*set images to have no borders*/
+/*set images to have no borders*
 img { 	border:0;
 }
-/*add display attributes for the semantic tags*/
+/*add display attributes for the semantic tags*
 header, footer, section, article, nav { display:block; 
 }
-/*SET FONTS*/
+/*SET FONTS*
 span.small { font-size:small;
 }
 h2 {font-size:large; font-family:"times new roman"; text-align:center;
 }
-/*PAGE LAYOUT*/
-/*equalise all the margins, paddings and borders built into various browsers*/
+/*PAGE LAYOUT*
+/*equalise all the margins, paddings and borders built into various browsers*
 div body header #content { margin:0; padding:0; border:0; 
 }
 body { background:#FFF url(images/green-grad.jpg) repeat-x; margin:auto;
 }
-/* Listing 8-5b. The CSS Style Sheet for Listing 8-5a (css3-text-shadow.css) */
+/* Listing 8-5b. The CSS Style Sheet for Listing 8-5a (css3-text-shadow.css) *
 body {background-color:#99CCFF;
 }
 #banner h1 { color: #fff; 
@@ -193,23 +193,23 @@ div#inlineblockcontainer.data
 	display: block;
 	background-color: transparent;
 	}
-/*set far right column for ads*/
+/*set far right column for ads*
 div#gallerpagerightcol { width:150px; float:right; text-align:center;	
 }
 div#gallerpagerightcol p.advert {font-size:small; margin-top:190px;
 } 
-/*set middle column for main content*/
+/*set middle column for main content*
 div#gallerpagemidcol { margin-left:135px; margin-right:155px;
 }
-/*set gallery block position*/
+/*set gallery block position*
 div#gallerpagegallery-block { position:relative; left: 30px; top:10px; 
 }
-/*set footer*/
+/*set footer*
 footer { 	clear:both; color:black; text-align:center; width:970px;
 }
 .clear { clear:both;
 }
-/*set menu buttons*/
+/*set menu buttons*
 li.btn a { display:block; background-color :#66CCFF; color:black; font-weight:bold; padding:4px;
 	margin-left:0; text-align:center; list-style-type:none; text-decoration:none; width:110px;
 }
@@ -218,59 +218,59 @@ li.btn a:hover { background-color:blue; color:white;
 li.btn { width:110px;
 }
 /*SET THUMBNAIL GALLERY BLOCK*/  
-/* Set general thumbnail styles */
+/* Set general thumbnail styles *
 #col-1	{ position: absolute; top: 0; left: 0; width:85px;
 } 
-/*place the column on the page*/
+/*place the column on the page*
 li	{ margin: 5px; list-style-type:none; 
 } 
 /*remove bullets from the un-ordered list elements and create the
-MouseOut state (default) - create and position a space for the larger images and hide them*/
+MouseOut state (default) - create and position a space for the larger images and hide them*
 #col-1 a img.hid { width: 260px; height:390px; position: absolute; top: 10px; left: 330px;
 	visibility: hidden;
 }
-/* MouseOver state (hover)- this reveals larger picture */
+/* MouseOver state (hover)- this reveals larger picture *
 #col-1 a:hover { background: white; }
 #col-1 a:hover img.hid { visibility:visible; }
 
 /*----------------------------------------------------*/
 
-/* set 2nd column of thumbnails 85px further over to right*/
+/* set 2nd column of thumbnails 85px further over to right*
 #col-2	{ position: absolute; top: 0; left: 85px; width:85px; }
 li	{ margin: 5px; list-style-type:none;	
 }
-/* MouseOut state (default) - hide larger picture */
+/* MouseOut state (default) - hide larger picture *
 #col-2 a img.hid { width: 260px; height:390px;
 	position: absolute; top: 10px; left: 245px; margin-left:0;
 	visibility: hidden;
 	}
-/* MouseOver state (hover)- reveal larger picture */
+/* MouseOver state (hover)- reveal larger picture *
 #col-2 a:hover { background: white; }
 #col-2 a:hover img.hid { visibility:visible; }
 
 /*----------------------------------------------------*/
 
-/* set 3nd column of thumbnails 170px further over to right*/
+/* set 3nd column of thumbnails 170px further over to right*
 #col-3	{ position: absolute; top: 0; left: 175px; width:95px; }
 li	{ margin: 5px; list-style-type:none;	
 }
-/* MouseOut state (default) - hide larger picture */
+/* MouseOut state (default) - hide larger picture *
 #col-3 a img.hid {
 	width: 260px; height:390px;
 	position: absolute; top: 10px; left: 155px; margin-left:0;
 	visibility: hidden;
 	}
-/* MouseOver state (hover)- reveal larger picture */
+/* MouseOver state (hover)- reveal larger picture *
 #col-3a:hover { background: white; 
 }
 #col-3 a:hover img.hid { visibility:visible; 
 }
-/* Listing 4-1b. Applying the display:inline-block; Style to the Second Row of Buttons (inline-block.css) - Set styles to equalise the browser rendition*/
+/* Listing 4-1b. Applying the display:inline-block; Style to the Second Row of Buttons (inline-block.css) - Set styles to equalise the browser rendition*
 html, h1, h2, h3, h4, h5, p, ol, ul, li { padding: 0; margin: 0;
 }
 /* **************************************************************************** */
 
-/*add display attributes for the semantic tags*/
+/*add display attributes for the semantic tags*
 header, footer, section, article, nav { display:block; 
 }
 header#gallerypageheader.data {width:970px; height:180px; padding:0; border:10px white solid; 
@@ -279,7 +279,7 @@ header#gallerypageheader.data {width:970px; height:180px; padding:0; border:10px
 /*
 h1 { font-size:300%; color :white; position: relative; left:90px; top: 55px; width:480px; 
 }
-*/
+*
 #rosette { position:relative; left:750px; top:5px; }
 
 
@@ -296,26 +296,26 @@ h3 { font-size: 110%; color:white; margin:0 0 6px 0;
 }
 #midcol { 	margin-left:315px; margin-right:145px; margin-top:10px; vertical-align:top; 
 }
-/* set side menu block position and width*/
+/* set side menu block position and width*
 nav { margin:10px 30px 0 10px; width:135px; float:right; 
 }
-/*Set list style within the menu block only. This removes bullets*/
+/*Set list style within the menu block only. This removes bullets*
 nav li { list-style-type:none; 
 }	
-/* set general side button styles */
+/* set general side button styles *
 nav li { margin-bottom: 3px; text-align: center; width:130px;
 }
-/* set general anchor styles and include the zoom fix for IE6*/
+/* set general anchor styles and include the zoom fix for IE6*
 nav li a { display: block; color: white; font-weight: bold; text-decoration: none; zoom:1;
 }
 /* specify mouse state styles */
-/* mouseout (default) */
+/* mouseout (default) *
 nav li a { background:#559a55; color: white; border: 5px outset #559a55; padding-bottom:3px;
 }
-/* mouseover */
+/* mouseover *
 nav li a:hover { background: red;  color:white; border: 5px outset red;
 }
-/*mouse active*/
+/*mouse active*
 nav li a:active { background:maroon;  border: 5px inset maroon; 
 }
 br.clear { 	clear:both; 
@@ -327,7 +327,7 @@ footer { clear:both; color:maroon; text-align:center;
 wrapper#horizonequal2dwrapper.data > div {
     border: 2px solid #ffa94d;
     border-radius: 5px;
-    /* background-color: #ffd8a8; */
+    /* background-color: #ffd8a8; *
     padding: 1em;
     color: #d9480f;
 }
@@ -337,7 +337,7 @@ wrapper#horizontalequal2dwrapper.data {
     grid-template-rows: repeat(3, 100px);
     height: 500px;
     width: 500px;
-    gap: 10px; */
+    gap: 10px; *
 }
 div#inlineblockcontainer.data {
     margin:auto; 
@@ -352,7 +352,7 @@ section#html5style2section {
 header#html5style2header {
     display: block;
 }
-/*remove the # from #header*/
+/*remove the # from #header*
 header#html5style2header {
     width: 920px;
     height: 180px;
@@ -397,7 +397,7 @@ div#html5style2midcol {
   vertical-align: top;
 }
 
-/*set nav block position and width*/
+/*set nav block position and width*
 nav#html5style2Nav { margin:10px 0 10px; width:135px; float:right; 
 }
 nav#html5style2Nav ul {
@@ -406,19 +406,19 @@ nav#html5style2Nav ul {
   float: right;
 }
 
-/*Set un-ordered list style within the menu block only. This removes bullets*/
+/*Set un-ordered list style within the menu block only. This removes bullets*
 nav#html5style2Nav li {
   list-style-type: none;
 }
 
-/* set general side button styles */
+/* set general side button styles *
 li.btn {
   margin-bottom: 3px;
   text-align: center;
   width: 130px;
 }
 
-/* set general anchor styles and include the zoom fix for IE6*/
+/* set general anchor styles and include the zoom fix for IE6*
 li.btn a {
   display: block;
   color: white;
@@ -427,20 +427,20 @@ li.btn a {
   zoom: 1;
 }
 /* specify mouse state styles */
-/* mouseout (default) */
+/* mouseout (default) *
 li.btn a {
   background: #559a55;
   color: white;
   border: 5px outset #559a55;
   padding-bottom: 3px;
 }
-/* mouseover */
+/* mouseover *
 li.btn a:hover {
   background: red;
   color: white;
   border: 5px outset red;
 }
-/*mouse active*/
+/*mouse active*
 li.btn a:active {
   background: maroon;
   border: 5px inset maroon;
@@ -456,7 +456,7 @@ div#html5style2footer {
   color: maroon;
   text-align: center;
 }
-/* end of style equalisation */
+/* end of style equalisation *
 p { background:rgba(255, 255, 255, .1);  margin-right: 40px; color: white; text-align:center;
 }
 a { background: orange; color:navy;
@@ -469,15 +469,15 @@ a { background: orange; color:navy;
 
 
 /* FÁa better result was achieved by using a different outset color, as follows (also see Figure 4-4): */ 
-/*mouseout state (see Figure 4-4)*/ 
+/*mouseout state (see Figure 4-4)* 
 li.hbtn a { background: #0080a0; border: 4px outset #aabaff; }
 
 
-/* Listing 4-7b. The CSS Listing for Changing the Tab for the five Tab Menu Pages (squaretabs.css) */
+/* Listing 4-7b. The CSS Listing for Changing the Tab for the five Tab Menu Pages (squaretabs.css) *
 
 div#container.data {width: 105%; margin:-6% auto 0 auto;
 }
-/* use display:inline to remove IE6 double margin bug*/
+/* use display:inline to remove IE6 double margin bug*
 nav li { display: inline; overflow: hidden; list-style-type: none;
 }
 /*
@@ -485,7 +485,7 @@ div#container.data { width:97%; margin:auto; min-width:800px; max-width:1100px; 
     100% calc(100% - 20px), calc(100% - 20px) 100%,
     20px 100%, 0 calc(100% - 20px), 0 20px);
 }
-/*mouseout state (see Figure 4-4)*/
+/*mouseout state (see Figure 4-4)*
 li.hbtn a { background: #0080a0; border: 4px outset #aabaff; }
 
 /* TABLE ELEMENTS */
@@ -520,38 +520,38 @@ ol ol ul, ol ul ul, ul ol ul, ul ul ul { list-style-type:square; }
 /* Listing 2-6b. The CSS Style Sheet for Listing 2-6a (gallery-page.css) */
 
 
-/*set images to have no borders*/
+/*set images to have no borders*
 img {
     border: 0;
 }
 
-/*set the generic tab style--and move menu upwards so that it overlaps the header*/ 
+/*set the generic tab style--and move menu upwards so that it overlaps the header* 
 div#hnav {
   position:relative; 
   top: -22.1em; 
   left: 3%;
   color: navy; margin: -25px 0 0 0; padding: 0px; padding-left: 3em; z-index: 1;
 }
-/* use display:inline to remove IE6 double margin bug*/
+/* use display:inline to remove IE6 double margin bug*
 #hnav li { display: inline; overflow: hidden; list-style-type: none;
 }
-/*set tab colour*/
+/*set tab colour*
 #hnav a, a.active { color: navy; background: #81d9f6; font: bold 1em Arial; border: 1px solid black; padding: 2px 5px 0px 5px; margin: 0; text-decoration: none; }
-/*make a 3px wide bottom border on tab the same colour as the page*/
+/*make a 3px wide bottom border on tab the same colour as the page*
 #hnav a.active { background: #cfecf5; color:navy; border-bottom: 3px solid #cfecf5;
 }
-/*hovering over a non-active tab shows an aqua tab*/
+/*hovering over a non-active tab shows an aqua tab*
 #hnav a:hover { background: aqua;
 }
 #hnav a:visited { color: navy;
 }
-/*hovering over the active tab shows navy text*/
+/*hovering over the active tab shows navy text*
 #hnav a.active:hover { background: #cfecf5; color: navy;
 }
 
 div.picture {
 width: 200px;
-/* transform: rotate(45deg);*/ 
+/* transform: rotate(45deg);* 
 overflow: hidden;
 }
 div.picture > img {
@@ -561,7 +561,7 @@ transform: rotate(-45deg);
 
 .parallel {
 position: relative;
-/* text color, paddings, etc. */
+/* text color, paddings, etc. *
 display: inline-block;
 border-radius: .2em;
 color: white;
@@ -572,7 +572,7 @@ border-width: 10px;
 border-left-width: 0;
 }
 .parallel::before {
-content: ''; /* To generate the box */
+content: ''; /* To generate the box *
 position: absolute;
 top: 0; right: 0; bottom: 0; left: 0;
 z-index: -1;
@@ -582,19 +582,19 @@ transform: skew(45deg);
 .parallel>div {
 transform: skewX(45deg);
 }
-/*set far right column for ads*/
+/*set far right column for ads*
 div#rightcol { position: relative; top: -23em; left: 1em; width:150px; float:right; text-align:center;
 }
 div#rightcol p.advert {font-size:small; margin-top:35px;
 }
-/*set middle column for main content*/
+/*set middle column for main content*
 #midcol { margin-left:135px; margin-right:155px;
 }
-/*set gallery block position*/
+/*set gallery block position*
 #gallery-block { position:relative; left: 30px; top:10px;
 }
 
-/*set footer*/
+/*set footer*
 footer {
     clear: both;
     color: black;
@@ -624,13 +624,13 @@ li.btn {
     width: 85px;
 }
 
-/*place the first column on the page*/
+/*place the first column on the page*
 li {
     margin: 5px;
     list-style-type: none;
 }
 
-/*remove bullets from the un-ordered list elements and create the MouseOut state (default) - create and position a space for the larger images and hide them*/
+/*remove bullets from the un-ordered list elements and create the MouseOut state (default) - create and position a space for the larger images and hide them*
 #col-1 a img.hid {
     width: 260px;
     height: 390px;
@@ -640,7 +640,7 @@ li {
     visibility: hidden;
 }
 
-/* MouseOver state (hover)- this reveals larger picture */
+/* MouseOver state (hover)- this reveals larger picture *
 #col-1 a:hover {
     background: white;
 }
@@ -650,7 +650,7 @@ li {
 }
 
 /*----------------------------------------------------*/
-/* set 2nd column of thumbnails 85px further over to right*/
+/* set 2nd column of thumbnails 85px further over to right*
 #col-2 {
     position: absolute;
     top: 0;
@@ -663,7 +663,7 @@ li {
     list-style-type: none;
 }
 
-/* MouseOut state (default) - hide larger picture */
+/* MouseOut state (default) - hide larger picture *
 #col-2 a img.hid {
     width: 260px;
     height: 390px;
@@ -674,7 +674,7 @@ li {
     visibility: hidden;
 }
 
-/* MouseOver state (hover)- reveal larger picture */
+/* MouseOver state (hover)- reveal larger picture *
 #col-2 a:hover {
     background: white;
 }
@@ -697,7 +697,7 @@ li {
     list-style-type: none;
 }
 
-/* MouseOut state (default) - hide larger picture */
+/* MouseOut state (default) - hide larger picture *
 #col-3 a img.hid {
     width: 260px;
     height: 390px;
@@ -708,7 +708,7 @@ li {
     visibility: hidden;
 }
 
-/* MouseOver state (hover)- reveal larger picture */
+/* MouseOver state (hover)- reveal larger picture *
 #col-3a:hover {
     background: white;
 }
@@ -717,7 +717,7 @@ li {
     visibility: visible;
 }
 
-/*set the gallery block 10px further to the right*/
+/*set the gallery block 10px further to the right*
 #gallery-block {
     position: absolute;
     left: 160px;
@@ -726,32 +726,32 @@ li {
 
 /* end-css  */
 
-/* Listing 4-12b. Providing the CSS Styling for all the Pages that Use the cssportal.com Menu (turquoise.css) */
+/* Listing 4-12b. Providing the CSS Styling for all the Pages that Use the cssportal.com Menu (turquoise.css) *
 br .clear {
     clear: both;
 }
 
 /* Listing 4-7b. The CSS Listing for Changing the Tab for the five Tab Menu Pages (squaretabs.css) */
 
-/* use display:inline to remove IE6 double margin bug*/
+/* use display:inline to remove IE6 double margin bug*
 #hnav li { display: inline; overflow: hidden; list-style-type: none;
 }
-/*set tab colour*/
+/*set tab colour*
 div#hnav a, a.active { color: navy; background: #81d9f6; font: bold 1em Arial; border: 1px solid black; padding: 2px 5px 0px 5px; margin: 0; text-decoration: none;
 }
-/*make a 3px wide bottom border on tab the same colour as the page*/
+/*make a 3px wide bottom border on tab the same colour as the page*
 div#hnav a.active { background: #cfecf5; color:navy; border-bottom: 3px solid #cfecf5;
 }
-/*hovering over a non-active tab shows an aqua tab*/
+/*hovering over a non-active tab shows an aqua tab*
 div#hnav a:hover { background: aqua;
 }
 div#hnav a:visited { color: navy;
 }
-/*hovering over the active tab shows navy text*/
+/*hovering over the active tab shows navy text*
 div#hnav a.active:hover { background: #cfecf5; color: navy;
 }
 /* **************** one-col************************** */
-/* Set general thumbnail styles */
+/* Set general thumbnail styles *
 #col-1 {
 	position: absolute;
 	top: 0;
@@ -759,20 +759,20 @@ div#hnav a.active:hover { background: #cfecf5; color: navy;
 	width: 85px;
 }
 
-/*place the column on the page*/
+/*place the column on the page*
 li {
 	margin: 5px;
 	list-style-type: none;
 }
 
-/*remove bullets from the list elements*/
+/*remove bullets from the list elements*
 img {
 	border: 0;
 }
 
 /*set images to have no borders*/
 
-/* MouseOut state (default) - create and position a space for the larger images and hide them*/
+/* MouseOut state (default) - create and position a space for the larger images and hide them*
 #onecol-1 a img.hid {
 	width: 260px;
 	height: 390px;
@@ -782,7 +782,7 @@ img {
 	visibility: hidden;
 }
 
-/* MouseOver state (hover)- reveal larger picture */
+/* MouseOver state (hover)- reveal larger picture *
 #onecol-1 a:hover {
 	background: white;
 }
@@ -793,7 +793,7 @@ img {
 
 /*----------------------------------------------------*/
 
-/* set 2nd column of thumbnails 85px further over to right*/
+/* set 2nd column of thumbnails 85px further over to right*
 #onecol-2 {
 	position: absolute;
 	top: 0;
@@ -810,7 +810,7 @@ img {
 	border: 0
 }
 
-/* MouseOut state (default) - hide larger picture */
+/* MouseOut state (default) - hide larger picture *
 #onecol-2 a img.hid {
 	width: 260px;
 	height: 390px;
@@ -821,7 +821,7 @@ img {
 	visibility: hidden;
 }
 
-/* MouseOver state (hover)- reveal larger picture */
+/* MouseOver state (hover)- reveal larger picture *
 #onecol-2 a:hover {
 	background: white;
 }
@@ -829,3 +829,4 @@ img {
 #onecol-2 a:hover img.hid {
 	visibility: visible;
 }
+*/
