--- a/CSS/gallery-page-HTML5.css
+++ b/CSS/gallery-page-HTML5.css
@@ -1,5 +1,5 @@
 @import 'https://fonts.googleapis.com/css?family=Alegreya+Sans';
-Listing 2-6b. The CSS Style Sheet for Listing 2-6a (gallery-page.css)
+/* Listing 2-6b. The CSS Style Sheet for Listing 2-6a (gallery-page.css) */
 /*set attributes for consistent appearance in all browsers*/
 html, body, p, ul, li, h1, h2 { margin:0; padding:0;
 }
@@ -43,9 +43,7 @@ footer { clear:both; color:black; text-align:center; width:970px;
 .clear { clear:both;
 }
 /*set menu buttons*/
-li.btn a { display:block; background-color :#66CCFF; color:black; font-weight:bold; 
-padding:4px; margin-left:0; text-align:center; list-style-type:none; 
-text-decoration:none; width:110px;
+li.btn a { display:block; background-color :#66CCFF; color:black; font-weight:bold; padding:4px; margin-left:0; text-align:center; list-style-type:none; text-decoration:none; width:110px;
 }
 li.btn a:hover { background-color:blue; color:white;
 }
@@ -61,8 +59,7 @@ li { margin: 5px; list-style-type:none;
 /*remove bullets from the un-ordered list elements and create the 
 MouseOut state (default) - create and position a space for the larger images and 
 hide them*/
-#col-1 a img.hid { width: 260px; height:390px; position: 
-absolute; top: 10px; left: 330px; visibility: hidden;
+#col-1 a img.hid { width: 260px; height:390px; position: absolute; top: 10px; left: 330px; visibility: hidden;
 }
 /* MouseOver state (hover)- this reveals larger picture */
 #col-1 a:hover { background: white; }
@@ -75,8 +72,7 @@ absolute; top: 10px; left: 330px; visibility: hidden;
 li { margin: 5px; list-style-type:none;
 }
 /* MouseOut state (default) - hide larger picture */
-#col-2 a img.hid { width: 260px; height:390px; 
-position: absolute; top: 10px; left: 245px; margin-left:0;visibility: hidden;
+#col-2 a img.hid { width: 260px; height:390px; position: absolute; top: 10px; left: 245px; margin-left:0;visibility: hidden;
 }
 /* MouseOver state (hover)- reveal larger picture */
 #col-2 a:hover { background: white; }
@@ -87,8 +83,7 @@ position: absolute; top: 10px; left: 245px; margin-left:0;visibility: hidden;
 li { margin: 5px; list-style-type:none;
 }
 /* MouseOut state (default) - hide larger picture */
-#col-3 a img.hid { width: 260px; height:390px; 
-position: absolute; top: 10px; left: 155px; margin-left:0; visibility: hidden;
+#col-3 a img.hid { width: 260px; height:390px; position: absolute; top: 10px; left: 155px; margin-left:0; visibility: hidden;
 }
 /* MouseOver state (hover)- reveal larger picture */
 #col-3a:hover { background: white;
