--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -61,8 +61,56 @@ br.clear { clear:both;
 footer { clear:both; color:maroon; text-align:center;
 }
 
+/*SET THUMBNAIL GALLERY BLOCK*/
+/* Set general thumbnail styles */
+#col-1 { position: absolute; top: 0; left: 0; width:85px;
+}
+/*place the first column on the page*/
+li { margin: 5px; list-style-type:none;
+}
+/*remove bullets from the un-ordered list elements and create the 
+MouseOut state (default) - create and position a space for the larger images and 
+hide them*/
+#col-1 a img.hid { width: 260px; height:390px; position: absolute; top: 10px; left: 330px; visibility: hidden;
+}
+/* MouseOver state (hover)- this reveals larger picture */
+#col-1 a:hover { background: white; }
+#col-1 a:hover img.hid { visibility:visible;
+}
+/*----------------------------------------------------*/
+/* set 2nd column of thumbnails 85px further over to right*/
+#col-2 { position: absolute; top: 0; left: 85px; width:85px;
+}
+li { margin: 5px; list-style-type:none;
+}
+/* MouseOut state (default) - hide larger picture */
+#col-2 a img.hid { width: 260px; height:390px; position: absolute; top: 10px; left: 245px; margin-left:0;visibility: hidden;
+}
+/* MouseOver state (hover)- reveal larger picture */
+#col-2 a:hover { background: white; }
+#col-2 a:hover img.hid { visibility:visible; }
+/*----------------------------------------------------*/
+/* set 3rd column of thumbnails 170px further over to right*/
+#col-3 { position: absolute; top: 0; left: 175px; width:95px; }
+li { margin: 5px; list-style-type:none;
+}
+/* MouseOut state (default) - hide larger picture */
+#col-3 a img.hid { width: 260px; height:390px; position: absolute; top: 10px; left: 155px; margin-left:0; visibility: hidden;
+}
+/* MouseOver state (hover)- reveal larger picture */
+#col-3a:hover { background: white;
+}
+#col-3 a:hover img.hid { visibility:visible;
+}
+/* Listing 2-6c. Conditional CSS for Listing 2-6a to Support Browser IE 7 (gallery-ie7.css)
+set the gallery block 10px further to the right
+*/
+#gallery-block { position:absolute; left: 165px; top:50px;
+}
+
 
 /*
+
 
 @import 'https://fonts.googleapis.com/css?family=Alegreya+Sans';
 
@@ -319,6 +367,7 @@ li {
 }
 
 */
+
 
 
 
