--- a/CSS/gallery-page-HTML5.css
+++ b/CSS/gallery-page-HTML5.css
@@ -22,20 +22,20 @@ body {margin:auto; width:970px;
 }
 header { width:970px;
 }
-nav { float:left; margin-left:10px; width:115px;
+nav#gallerypagenav { float:left; margin-left:10px; width:115px;
 }
-nav ul { margin-left:0; border:0; width:115px;
+nav#gallerypagenav ul { margin-left:0; border:0; width:115px;
 }
 /*set far right column for ads*/
-#rightcol { width:150px; float:right; text-align:center;
+#gallerypagerightcol { width:150px; float:right; text-align:center;
 }
-#rightcol p.advert {font-size:small; margin-top:190px;
+#gallerypagerightcol p.advert {font-size:small; margin-top:190px;
 }
 /*set middle column for main content*/
-#midcol { margin-left:135px; margin-right:155px;
+#gallerypagemidcol { margin-left:135px; margin-right:155px;
 }
 /*set gallery block position*/
-#gallery-block { position:relative; left: 130px; top:10px;
+#gallerypagegallery-block { position:relative; left: 130px; top:10px;
 }
 /*set footer*/
 footer { clear:both; color:black; text-align:center; width:970px;
