--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -61,56 +61,49 @@ br.clear { clear:both;
 footer { clear:both; color:maroon; text-align:center;
 }
 
-/*SET THUMBNAIL GALLERY BLOCK*/
-/* Set general thumbnail styles */
-#col-1 { position: absolute; top: 0; left: 0; width:85px;
+Listing 2-6b. The CSS Style Sheet for Listing 2-6a (gallery-page.css)
+/*set attributes for consistent appearance in all browsers*/
+html, body, p, ul, li, h1, h2 { margin:0; padding:0;
 }
-/*place the first column on the page*/
-li { margin: 5px; list-style-type:none;
+/*set images to have no borders*/
+img {
+border:0;
 }
-/*remove bullets from the un-ordered list elements and create the 
-MouseOut state (default) - create and position a space for the larger images and 
-hide them*/
-#col-1 a img.hid { width: 260px; height:390px; position: absolute; top: 10px; left: 330px; visibility: hidden;
+/*add display attributes for the semantic tags*/
+header, footer, section, article, nav { display:block;
 }
-/* MouseOver state (hover)- this reveals larger picture */
-#col-1 a:hover { background: white; }
-#col-1 a:hover img.hid { visibility:visible;
+/*SET FONTS*/
+span.small { font-size:small;
 }
-/*----------------------------------------------------*/
-/* set 2nd column of thumbnails 85px further over to right*/
-#col-2 { position: absolute; top: 0; left: 85px; width:85px;
+h1 { font-size:x-large; font-family:"times new roman"; text-align:center;
 }
-li { margin: 5px; list-style-type:none;
+h2 {font-size:large; font-family:"times new roman"; text-align:center;
 }
-/* MouseOut state (default) - hide larger picture */
-#col-2 a img.hid { width: 260px; height:390px; position: absolute; top: 10px; left: 245px; margin-left:0;visibility: hidden;
+/*PAGE LAYOUT*/
+body {margin:auto; width:970px;
 }
-/* MouseOver state (hover)- reveal larger picture */
-#col-2 a:hover { background: white; }
-#col-2 a:hover img.hid { visibility:visible; }
-/*----------------------------------------------------*/
-/* set 3rd column of thumbnails 170px further over to right*/
-#col-3 { position: absolute; top: 0; left: 175px; width:95px; }
-li { margin: 5px; list-style-type:none;
+header { width:970px;
 }
-/* MouseOut state (default) - hide larger picture */
-#col-3 a img.hid { width: 260px; height:390px; position: absolute; top: 10px; left: 155px; margin-left:0; visibility: hidden;
+nav { float:left; margin-left:10px; width:115px;
 }
-/* MouseOver state (hover)- reveal larger picture */
-#col-3a:hover { background: white;
+nav ul { margin-left:0; border:0; width:115px;
 }
-#col-3 a:hover img.hid { visibility:visible;
+/*set far right column for ads*/
+#rightcol { width:150px; float:right; text-align:center;
 }
-/* Listing 2-6c. Conditional CSS for Listing 2-6a to Support Browser IE 7 (gallery-ie7.css)
-set the gallery block 10px further to the right
-*/
-#gallery-block { position:absolute; left: 165px; top:50px;
+#rightcol p.advert {font-size:small; margin-top:190px;
 }
-
-
-/*
-
+/*set middle column for main content*/
+#midcol { margin-left:135px; margin-right:155px;
+}
+/*set gallery block position*/
+#gallery-block { position:relative; left: 30px; top:10px;
+}
+/*set footer*/
+footer { clear:both; color:black; text-align:center; width:970px;
+}
+.clear { clear:both;
+}
 
 @import 'https://fonts.googleapis.com/css?family=Alegreya+Sans';
 
@@ -367,6 +360,7 @@ li {
 }
 
 */
+
 
 
 
