--- a/CSS/gallery-page-HTML5.css
+++ b/CSS/gallery-page-HTML5.css
@@ -36,7 +36,7 @@ nav#gallerypagenav ul { margin-left:0; border:0; width:115px;
 div#gallerypagemidcol { margin-left:135px; margin-right:155px;
 }
 /*set gallery block position*/
-div#gallerypagegallery-block { position:relative; left: 30px; top:10px;
+div#gallerypagegallery-block { position:relative; left: 8em; top:10px;
 }
 /*set footer*/
 footer { clear:both; color:black; text-align:center; width:970px;
