--- a/CSS/gallery-page-HTML5.css
+++ b/CSS/gallery-page-HTML5.css
@@ -33,7 +33,7 @@ nav#gallerypagenav ul { margin-left:0; border:0; width:115px;
 #gallerypagerightcol p.advert {font-size:small; margin-top:190px;
 }
 /*set middle column for main content*/
-div#gallerypagemidcol { margin-left:135px; margin-right:155px;
+div#gallerypagemidcol.data { margin-left:135px; margin-right:155px;
 }
 /*set gallery block position*/
 div#gallerypagegallery-block { position:relative; left: 8em; top:10px;
