--- a/CSS/gallery-page-HTML5.css
+++ b/CSS/gallery-page-HTML5.css
@@ -28,7 +28,7 @@ nav#gallerypagenav { float:left; margin-left:10px; width:115px;
 nav#gallerypagenav ul { margin-left:0; border:0; width:115px;
 }
 /*set far right column for ads*/
-#gallerypagerightcol { width:150px; float:right; text-align:center;
+#gallerypagerightcol { width: 12em; float:right; text-align:center;
 }
 #gallerypagerightcol p.advert {font-size:small; margin-top:190px;
 }
