--- a/CSS/gallery-page-HTML5.css
+++ b/CSS/gallery-page-HTML5.css
@@ -5,6 +5,10 @@ html, body, p, ul, li, h1, h2 { margin:0; padding:0;
 }
 #kite { width: 960px;}
 #paper { width: 960px;}
+#take-off { width: 960px;}
+#paper { width: 960px;}
+#kite { width: 960px;}
+#paper { width: 960px;}
 /*set images to have no borders*/
 img {
 border:0;
