--- a/CSS/gallery-page-HTML5.css
+++ b/CSS/gallery-page-HTML5.css
@@ -33,7 +33,7 @@ h2 { font-size:x-large; color:white; margin:0 0 10px 0;
 }
 h3 { font-size:large; color:white; margin:0 0 6px 0; padding: 2%;
 }
-#leftcol { float:left; width: 310px; vertical-align:top;
+div#leftcol { float:left; width: 310px; vertical-align:top;
 }
 #rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
 }
