--- a/CSS/gallery-page-HTML5.css
+++ b/CSS/gallery-page-HTML5.css
@@ -25,9 +25,9 @@ header#html5styleheader.data {width:920px; height:180px; padding:0; border:10px 
 }
 h1 { font-size:300%; color :white; position: relative; left:90px; top: 15px; width:5500px;
 }
-#rosette { position:relative; left:750px; top:5px;
+div#rosette { position:relative; left:750px; top:5px;
 }
-#content { background-color:transparent; border-left:10px white solid; border-right:10px white solid; border-bottom:10px white solid; width: 904px; margin-top: -10px; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon;
+div#content { background-color:transparent; border-left:10px white solid; border-right:10px white solid; border-bottom:10px white solid; width: 904px; margin-top: -10px; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon;
 }
 h2 { font-size:x-large; color:white; margin:0 0 10px 0;
 }
@@ -35,9 +35,9 @@ h3 { font-size:large; color:white; margin:0 0 6px 0; padding: 2%;
 }
 div#leftcol { float:left; width: 310px; vertical-align:top;
 }
-#rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
+div#rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
 }
-#midcol { margin-left:315px; margin-right:145px; margin-top:10px; 
+div#midcol { margin-left:315px; margin-right:145px; margin-top:10px; 
 vertical-align:top;
 }
 /*set nav block position and width and remove the #menu item*/
