--- a/CSS/gallery-page-HTML5.css
+++ b/CSS/gallery-page-HTML5.css
@@ -8,7 +8,7 @@ html, body, p, ul, li, h1, h2 { margin:0; padding:0;
 #take-off { width: 960px;}
 #paper { width: 960px;}
 #kite { width: 960px;}
-#paper { width: 960px;}
+#plane { width: 960px;}
 /*set images to have no borders*/
 img {
 border:0;
