--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -203,9 +203,9 @@ text-shadow: 0.1em 0.1em 0.2em black;
 	padding:8px; 
 	font-size: large; color:maroon; 
 } 
-h2 { font-size: 150%; color: #333; margin:0 0 10px 0; text-align: center; 
+h2 { font-size: large; color: maroon; margin:0 0 10px 0; text-align: center; 
 } 
-h3 { font-size: 121% ; color: #333; margin:0 0 6px 0; 
+h3 { font-size: large; color: #333; margin:0 0 6px 0; 
 } 
 #html5styleleftcol { float:left; width: 310px; vertical-align:top; 
 } 
