--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -98,15 +98,15 @@ nav#gallerypagenav { margin-left:10px; width:115px;
 nav#gallerypagenav ul { margin-left:0; border:0; width:115px;
 }
 /*set far right column for ads*/
-#gallerypagerightcol { width:150px; float:right; text-align:center;
+div#gallerypagerightcol { width:150px; float:right; text-align:center;
 }
-#gallerypagerightcol p.advert {font-size:small; margin-top:190px;
+div#gallerypagerightcol p.advert {font-size:small; margin-top:190px;
 }
 /*set middle column for main content*/
-#gallerypagemidcol { margin-left:135px; margin-right:155px;
+div#gallerypagemidcol { margin-left:135px; margin-right:155px;
 }
 /*set gallery block position*/
-#gallerypagegallery-block { position:relative; left: 30px; top:10px;
+div#gallerypagegallery-block { position:relative; left: 30px; top:10px;
 }
 /*set footer*/
 footer { clear:both; color:black; text-align:center; width:970px;
