--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -106,7 +106,7 @@ div#gallerypagerightcol p.advert {font-size:small; margin-top:190px;
 div#gallerypagemidcol { margin-left:135px; margin-right:155px;
 }
 /*set gallery block position*/
-div#gallerypagegallery-block { position:relative; left: 30px; top:10px;
+div#gallery-block { position:relative; left: 30px; top:10px;
 }
 /*set footer*/
 footer { clear:both; color:black; text-align:center; width:970px;
