--- a/CSS/gallery-page-HTML5.css
+++ b/CSS/gallery-page-HTML5.css
@@ -3,7 +3,7 @@
 /*set attributes for consistent appearance in all browsers*/
 html, body, p, ul, li, h1, h2 { margin:0; padding:0;
 }
-#kite { width: 960px;}
+#kite { width: 960px; height: 500px; }
 #paper { width: 960px;}
 #take-off { width: 960px;}
 #paper { width: 960px;}
