--- a/CSS/gallery-page-HTML5.css
+++ b/CSS/gallery-page-HTML5.css
@@ -37,7 +37,7 @@ div#leftcol { float:left; width: 310px; vertical-align:top;
 }
 div#rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
 }
-div#midcol { margin-left:315px; margin-right:145px; margin-top:10px; 
+div#html5style2midcol { margin-left:315px; margin-right:145px; margin-top:10px; 
 vertical-align:top;
 }
 /*set nav block position and width and remove the #menu item*/
