--- a/CSS/gallery-page-HTML5.css
+++ b/CSS/gallery-page-HTML5.css
@@ -88,9 +88,9 @@ body {margin:auto; width:970px;
 }
 header { width:970px;
 }
-nav#gallerypagenav { float:left; margin-left:10px; width:115px;
+nav#gallerypagenav.data { float:left; margin-left:10px; width:115px;
 }
-nav#gallerypagenav ul { margin-left:0; border:0; width:115px;
+nav#gallerypagenav.data ul { margin-left:0; border:0; width:115px;
 }
 /*set far right column for ads*/
 div#gallerypagerightcol { width: 12em; float:right; text-align:center;
@@ -101,7 +101,7 @@ div#gallerypagerightcol p.advert {font-size:small; margin-top:190px;
 div#gallerypagemidcol.data { margin-left:135px; margin-right:155px;
 }
 /*set gallery block position*/
-div#gallery-block.data { position:relative; left: 8em; top: 10px;
+div#gallerypagegallery-block.data { position:relative; left: 8em; top: 10px;
 }
 /*set footer*/
 footer { clear:both; color:black; text-align:center; width:970px;
